@@ -3257,7 +3257,7 @@ AT_DATA([caller.cob], [
 
 AT_CHECK([$COMPILE_MODULE callee.cob], [0], [], [])
 AT_CHECK([$COMPILE caller.cob], [0], [], [])
-AT_CHECK([COB_PRE_LOAD=callee ./caller], [0], [], [])
+AT_CHECK([COB_PRE_LOAD=callee $COBCRUN_DIRECT ./caller], [0], [], [])
 
 AT_CLEANUP
 
@@ -9184,7 +9184,8 @@ AT_CLEANUP
 # and    -fsource-location, which is implied by -debug/g
 AT_SETUP([READY TRACE / RESET TRACE])
 AT_KEYWORDS([runmisc -ftrace -ftraceall -fsource-location
-COB_PHYSICAL_CANCEL COB_PRE_LOAD physical_cancel pre_load])
+CALL RECURSIVE RETURN-CODE
+COB_PHYSICAL_CANCEL COB_PRE_LOAD])
 
 AT_DATA([caller.cob], [
        IDENTIFICATION   DIVISION.
@@ -9201,8 +9202,8 @@ AT_DATA([caller.cob], [
            CALL "callee1"
            END-CALL
            CALL "callee1"
-           END-CALL
            CANCEL "callee1"
+           CALL "callrec"
            MOVE 0 TO RETURN-CODE
            STOP RUN.
 ])
@@ -9271,12 +9272,29 @@ AT_DATA([preload.cob], [
        SOME-PAR.
            PERFORM OTHER-SEC
            MOVE 0 TO RETURN-CODE.
-       ENTRY "LEAVE-ME".  
+       ENTRY "LEAVE-ME".
        END-PAR.
            EXIT PROGRAM.
        OTHER-SEC SECTION.
            COMPUTE RETURN-CODE = 1 + 2 END-COMPUTE.
        EX. EXIT.
+])
+
+AT_DATA([preload2.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      callrec IS RECURSIVE.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 filler        PIC 9 VALUE 0.
+          88 first-call VALUE 0.
+          88 called     VALUE 1.
+       PROCEDURE        DIVISION.
+       SOME-SEC SECTION.
+           IF first-call
+              SET called TO TRUE
+              CALL 'callrec'
+           END-IF
+           GOBACK.
 ])
 
 AT_DATA([callee2c.cob], [
@@ -9301,10 +9319,12 @@ $COBC callee2.cob], [0], [], [])
 AT_CHECK([COB_OLD_TRACE=y \
 $COBC -ftrace preload.cob], [0], [], [])
 AT_CHECK([COB_OLD_TRACE=y \
+$COBC -ftraceall preload2.cob], [0], [], [])
+AT_CHECK([COB_OLD_TRACE=y \
 $COBC -fsource-location callee2c.cob], [0], [], [])
 AT_CHECK([COB_OLD_TRACE=y \
 $COBC -x -o prog -ftraceall caller.cob], [0], [], [])
-AT_CHECK([COB_PHYSICAL_CANCEL=1 COB_PRE_LOAD=preload ./prog], [0], [],
+AT_CHECK([COB_PHYSICAL_CANCEL=1 COB_PRE_LOAD="preload"$PATHSEP"preload2" $COBCRUN_DIRECT ./prog], [0], [],
 [Source :    'caller.cob'
 Program-Id: caller           Statement: MOVE                   Line: 7
 Program-Id: caller           Statement: RESET TRACE            Line: 8
@@ -9393,7 +9413,24 @@ Program-Id: callee1          Statement: SUBTRACT               Line: 34
 Program-Id: callee1          Statement: EXIT PROGRAM           Line: 35
 Program-Id: callee1          Exit:      callee1
 Source :    'caller.cob'
-Program-Id: caller           Statement: CANCEL                 Line: 17
+Program-Id: caller           Statement: CANCEL                 Line: 16
+Program-Id: caller           Statement: CALL                   Line: 17
+Source:     'preload2.cob'
+Program-Id: callrec          Entry:     callrec                Line: 9
+Program-Id: callrec          Section:   SOME-SEC               Line: 10
+Program-Id: callrec          Paragraph: (None)                 Line: 10
+Program-Id: callrec          Statement: IF                     Line: 11
+Program-Id: callrec          Statement: SET                    Line: 12
+Program-Id: callrec          Statement: CALL                   Line: 13
+Program-Id: callrec          Entry:     callrec                Line: 9
+Program-Id: callrec          Section:   SOME-SEC               Line: 10
+Program-Id: callrec          Paragraph: (None)                 Line: 10
+Program-Id: callrec          Statement: IF                     Line: 11
+Program-Id: callrec          Statement: GOBACK                 Line: 15
+Program-Id: callrec          Exit:      callrec
+Program-Id: callrec          Statement: GOBACK                 Line: 15
+Program-Id: callrec          Exit:      callrec
+Source :    'caller.cob'
 Program-Id: caller           Statement: MOVE                   Line: 18
 Program-Id: caller           Statement: STOP RUN               Line: 19
 ])
@@ -9401,9 +9438,10 @@ Program-Id: caller           Statement: STOP RUN               Line: 19
 AT_CHECK([$COBC -ftraceall callee1.cob], [0], [], [])
 AT_CHECK([$COBC callee2.cob], [0], [], [])
 AT_CHECK([$COBC -ftrace preload.cob], [0], [], [])
+AT_CHECK([$COBC -ftraceall preload2.cob], [0], [], [])
 AT_CHECK([$COBC -fsource-location callee2c.cob], [0], [], [])
 AT_CHECK([$COBC -x -o prog -ftraceall caller.cob], [0], [], [])
-AT_CHECK([COB_PHYSICAL_CANCEL=1 COB_PRE_LOAD=preload ./prog], [0], [],
+AT_CHECK([COB_PHYSICAL_CANCEL=1 COB_PRE_LOAD="preload"$PATHSEP"preload2" $COBCRUN_DIRECT ./prog], [0], [],
 [Source: 'caller.cob'
 Program-Id: caller
 Program-Id: caller                      MOVE                            Line:      7
@@ -9481,7 +9519,24 @@ Program-Id: callee1                     EXIT PROGRAM                    Line:   
 Program-Id: callee1               Exit: callee1                         Line:     35
 Source: 'caller.cob'
 Program-Id: caller
-Program-Id: caller                      CANCEL                          Line:     17
+Program-Id: caller                      CANCEL                          Line:     16
+Program-Id: caller                      CALL                            Line:     17
+Source: 'preload2.cob'
+Program-Id: callrec
+Program-Id: callrec              Entry: callrec                         Line:      9
+Program-Id: callrec            Section: SOME-SEC                        Line:     10
+Program-Id: callrec                     IF                              Line:     11
+Program-Id: callrec                     SET                             Line:     12
+Program-Id: callrec                     CALL                            Line:     13
+Program-Id: callrec              Entry: callrec                         Line:      9
+Program-Id: callrec            Section: SOME-SEC                        Line:     10
+Program-Id: callrec                     IF                              Line:     11
+Program-Id: callrec                     GOBACK                          Line:     15
+Program-Id: callrec               Exit: callrec                         Line:     15
+Program-Id: callrec                     GOBACK                          Line:     15
+Program-Id: callrec               Exit: callrec                         Line:     15
+Source: 'caller.cob'
+Program-Id: caller
 Program-Id: caller                      MOVE                            Line:     18
 Program-Id: caller                      STOP RUN                        Line:     19
 ])
